<resources>
    <string name="app_name">Sena Camera</string>
    <string name="action_setting">Setting</string>
    <string name="action_menu">Menu</string>
    <string name="action_media">Media</string>
    <string name="action_preference">Preference</string>
    <string name="action_connect">Connect</string>
    <string name="action_cancel">Cancel</string>
    <string name="action_agree">Agree</string>
    <string name="action_save">Save</string>
    <string name="action_edit">Edit</string>
    <string name="action_delete_all">Delete All</string>
    <string name="action_delete">Delete</string>
    <string name="action_select">Select</string>
    <string name="action_deselect">Deselect</string>
    <string name="action_share">Share</string>
    <string name="action_stop">Stop</string>
    <string name="action_preview">Preview</string>
    <string name="action_device_list">Device List</string>
    <string name="action_add_new_device">+ Add New Device</string>
    <string name="action_back">Back</string>
    <string name="action_close">Close</string>
    <string name="action_select_all">All</string>
    <string name="action_play">Play</string>
    <string name="action_pause">Pause</string>
    <string name="action_expand">Expand</string>
    <string name="action_collapse">Collapse</string>
    <string name="action_retry">Retry</string>
    <string name="action_done">Done</string>
    <string name="action_go_to_settings">Go to Settings</string>
    <string name="action_user_guide">User Guide</string>
    <string name="action_ok">OK</string>
    <string name="action_reset">Reset</string>
    <string name="action_continue">Continue</string>
    <string name="action_update_firmware">Update Firmware</string>
    <string name="action_format">Format</string>
    <string name="action_update">Update</string>
    <string name="action_format_sd_card">Format SD Card</string>
    <string name="action_confirm">Confirm</string>
    <string name="action_connect_camera">Connect Camera</string>
    <string name="action_allow_access">Allow access</string>
    <string name="action_next">Next</string>
    <string name="action_clear_cache">Clear Cache</string>
    <string name="title_media">Media</string>
    <string name="title_device">Device</string>
    <string name="title_storage">Storage</string>
    <string name="title_my_devices">My Devices</string>
    <string name="title_settings">Settings</string>
    <string name="title_preference">Preference</string>
    <string name="title_preview">Preview</string>
    <string name="title_connect_device">Connect Device</string>
    <string name="title_media_detail">Media Detail</string>
    <string name="title_change_password">Change Password</string>
    <string name="title_forgot_password">Forgot Password</string>
    <string name="title_video">Video</string>
    <string name="title_photo">Photo</string>
    <string name="dialog_not_show_again">Don\'t show again</string>
    <string name="dialog_set_up_device_before_connecting">Set up your device before connecting to the app. Any changes you make will be applied once connected.</string>
    <string name="dialog_confirm_cancel_download">Canceling the download cannot be undone. Do you still want to proceed?</string>
    <string name="dialog_confirm_delete">Do you wish to delete?</string>
    <string name="dialog_confirm_delete_this_file">Do you wish to delete this file?</string>
    <string name="dialog_confirm_delete_these_files">Do you wish to delete these files?</string>
    <string name="dialog_confirm_select_device">Do you wish to select this device?</string>
    <string name="dialog_stop_download_title">Stop Download</string>
    <string name="dialog_confirm_stop_download">Canceling the download cannot be undone. Do you still want to proceed?</string>
    <string name="dialog_connection_failed">Connection Failed</string>
    <string name="dialog_connection_failed_desc">Make sure Bluetooth is enabled and your device is turned on.</string>
    <string name="dialog_you_are_ready">You’re Ready!</string>
    <string name="dialog_you_are_ready_desc">Start exploring your device by checking the "User Guide".</string>
    <string name="dialog_connected">Connected</string>
    <string name="dialog_reset_to_default_title">Reset to Default</string>
    <string name="dialog_reset_to_default_desc">The settings will be reset to defaults. Do you want to continue?</string>
    <string name="dialog_clear_cache_title">Clear Cache</string>
    <string name="dialog_clear_cache_desc">Do you wish to clear the cache?</string>
    <string name="dialog_format_sd_card_title">Format SD Card</string>
    <string name="dialog_format_sd_card_desc">Do you want to format the SD card?</string>
    <string name="dialog_update_failed_title">Update Failed</string>
    <string name="dialog_update_failed_desc">Unable to install the firmware. Please try again later.</string>
    <string name="dialog_low_battery_title">Low Battery</string>
    <string name="dialog_low_battery_desc">Charge the battery at least to 50% to proceed with the firmware update.</string>
    <string name="dialog_factory_reset_title">Factory Reset</string>
    <string name="dialog_factory_reset_desc">All settings will be erased and restored to factory defaults. Do you want to continue?</string>
    <string name="dialog_device_is_not_connected_title">Device Is Not Connected</string>
    <string name="dialog_device_is_not_connected_desc">Connect your device to access all the features in the app.</string>
    <string name="dialog_new_firmware_available_title">New Firmware Available</string>
    <string name="dialog_new_firmware_available_desc">Keep your device up to date with the latest features.</string>
    <string name="dialog_unsaved_changes_title">Unsaved Changes</string>
    <string name="dialog_unsaved_changes_desc">There are unsaved changes. Do you want to continue?</string>
    <string name="dialog_device_rename_title">Rename</string>
    <string name="connected">Connected</string>
    <string name="not_connected">Not Connected</string>
    <string name="my_devices">My Devices</string>
    <string name="add_new_device">Add New Device</string>
    <string name="today">Today</string>
    <string name="all">All</string>
    <string name="stop_download">Stop Download</string>
    <string name="saving">Saving...</string>
    <string name="prism2">Prism 2</string>
    <string name="phantom_cam">Phantom Cam</string>
    <string name="camera_50c">50C</string>
    <string name="version_1_0">v1.0</string>
    <string name="battery_status_59">59%</string>
    <string name="camera_zoom_1_0">1.0x</string>
    <string name="camera_zoom_1_5">1.5x</string>
    <string name="camera_zoom_2_0">2.0x</string>
    <string name="camera_zoom_2_5">2.5x</string>
    <string name="camera_zoom_3_0">3.0x</string>
    <string name="photo_mode_single">Single</string>
    <string name="photo_mode_burst">Burst</string>
    <string name="photo_mode_timelapse">TimeLapse</string>
    <string name="photo_mode_self_timer">Self-Timer</string>
    <string name="video_mode_video">Video</string>
    <string name="video_mode_slow_motion">Slow-Motion</string>
    <string name="video_mode_timelapse">TimeLapse</string>
    <string name="video_mode_loop_recording">Loop</string>
    <string name="connecting">Connecting</string>
    <string name="searching">Searching</string>
    <string name="make_sure_your_device_on">Make sure your device is turned on.</string>
    <string name="select_your_device">Select Your Device</string>
    <string name="connecting_desc">Keep your device on.</string>
    <string name="how_to_connect">How to Connect?</string>
    <string name="how_to_connect_desc">Find out how to connect your device to your phone.</string>
    <string name="failed_find_device">Failed to Find Device</string>
    <string name="failed_find_device_desc">To connect the device, power on the device and press the button below.</string>
    <string name="set_your_device">Set your device</string>
    <string name="set_your_device_desc">Set your device name and a new password.</string>
    <string name="new_password">New Password</string>
    <string name="password_character_count_range">Between 8 and 12 characters</string>
    <string name="password_character_restriction">You can use any characters except: [ , ]</string>
    <string name="enter_password">Enter a password</string>
    <string name="enter_name">Enter a name</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="password_match">Passwords match</string>
    <string name="password">Password</string>
    <string name="forgot_password_ask"><u>Forgot Password?</u></string>
    <string name="forgot_password">Forgot Password</string>
    <string name="password_check">Password Check</string>
    <string name="password_check_desc">Control Menu  →  Settings  →  Wi-Fi\nWi-Fi menu to check the password</string>
    <string name="factory_reset">Factory Reset</string>
    <string name="factory_reset_desc">Control Menu  →  Settings  →  Factory Reset\nAll settings will be reset to default values</string>
    <string name="power_on">Power On</string>
    <string name="power_on_desc">Press the Phone Button and the Jog Dial for 1 second to turn on the headset</string>
    <string name="device_settings">Device Settings</string>
    <string name="firmware_update">Firmware Update</string>
    <string name="firmware_language">Firmware Language</string>
    <string name="clear_cache">Clear Cache</string>
    <string name="help_guide">Help &amp; Guide</string>
    <string name="display_appearance">Display &amp; Appearance</string>
    <string name="front_display">Front Display</string>
    <string name="main_status_led">Main Status LED</string>
    <string name="battery_status_led">Battery Status LED</string>
    <string name="color_effect">Color Effect</string>
    <string name="white_balance">White Balance</string>
    <string name="auto_power_off">Auto Power Off</string>
    <string name="screen_saver">Screen Saver</string>
    <string name="language">Language</string>
    <string name="wifi">Wi-Fi</string>
    <string name="sd_card">SD Card</string>
    <string name="device_info">Device Info</string>
    <string name="current_version">Current Version</string>
    <string name="latest_version">Latest Version</string>
    <string name="warning_select_device_language">Select your device language.</string>
    <string name="warning_charge_battery">Charge the battery to at least 50% to proceed with the firmware update.</string>
    <string name="warning_not_turn_off_device">Do not turn off your device during the update.</string>
    <string name="warning_not_close_app">Do not close the app, and keep your device nearby.</string>
    <string name="user_guide">User Guide</string>
    <string name="quick_guide">Quick Guide</string>
    <string name="video_guide">Video Guide</string>
    <string name="support">Support</string>
    <string name="forum">Forum</string>
    <string name="mailing_list">Mailing List</string>
    <string name="terms_of_use">Terms of Use</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="storage">Storage</string>
    <string name="modes">Modes</string>
    <string name="mode">Mode</string>
    <string name="option">Option</string>
    <string name="resolution">Resolution</string>
    <string name="iso">ISO</string>
    <string name="fov">FOV</string>
    <string name="ev">EV</string>
    <string name="metering">Metering</string>
    <string name="date_caption">Date Caption</string>
    <string name="image_quality">Image Quality</string>
    <string name="device_management">Device Management</string>
    <string name="power_format">Power &amp; Format</string>
    <string name="photo_burst">Photo Burst</string>
    <string name="setting_time_lapse_interval">Timelapse Interval</string>
    <string name="setting_time_lapse_duration">Timelapse Duration</string>
</resources>