<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:clickable="true"
    android:focusable="true"
    android:background="@color/background_primary_color"
    tools:context=".ui.fragment.FragmentDeviceSettings">

    <LinearLayout
        android:orientation="vertical"
        android:padding="16dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <!-- top bar -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center"
            android:layout_marginBottom="24dp">
            <ImageButton
                android:id="@+id/back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/action_back"
                android:background="@drawable/selector_button_back" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:text="@string/device_settings" />
            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1" />
            <View
                android:layout_width="40dp"
                android:layout_height="40dp" />
        </LinearLayout>

        <!-- settings scroll view -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <!-- display & appearance -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/button_disabled_color"
                    android:text="@string/display_appearance" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="56dp"
                    android:paddingHorizontal="16dp"
                    android:background="@drawable/rounded_gray_section">

                    <!-- screen saver -->
                    <com.sena.senacamera.ui.component.MenuSelection
                        android:id="@+id/screen_saver_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_selection_title="@string/screen_saver"
                        app:menu_selection_value="1 Min" />

                    <!-- front display -->
                    <com.sena.senacamera.ui.component.MenuSwitch
                        android:id="@+id/front_display_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_switch_title="@string/front_display" />

                    <!-- main status led -->
                    <com.sena.senacamera.ui.component.MenuSwitch
                        android:id="@+id/main_status_led_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_switch_title="@string/main_status_led" />

                    <!-- battery status led -->
                    <com.sena.senacamera.ui.component.MenuSwitch
                        android:id="@+id/battery_status_led_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_switch_title="@string/battery_status_led" />

                    <!-- color effect -->
                    <com.sena.senacamera.ui.component.MenuSelection
                        android:id="@+id/color_effect_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_selection_title="@string/color_effect"
                        app:menu_selection_value="Normal" />

                    <!-- white balance -->
                    <com.sena.senacamera.ui.component.MenuSelection
                        android:id="@+id/white_balance_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_selection_title="@string/white_balance"
                        app:menu_selection_value="Auto"
                        app:menu_selection_underline="false"/>

                </LinearLayout>

                <!-- power & format -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/button_disabled_color"
                    android:text="@string/power_format" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="56dp"
                    android:paddingHorizontal="16dp"
                    android:background="@drawable/rounded_gray_section">

                    <!-- auto power off -->
                    <com.sena.senacamera.ui.component.MenuSelection
                        android:id="@+id/auto_power_off_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_selection_title="@string/auto_power_off"
                        app:menu_selection_value="5 Min" />

                    <!-- device_language -->
                    <com.sena.senacamera.ui.component.MenuSelection
                        android:id="@+id/device_language_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_selection_underline="false"
                        app:menu_selection_title="@string/language"
                        app:menu_selection_value="English" />

                </LinearLayout>

                <!-- device management -->
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="16dp"
                    android:textColor="@color/button_disabled_color"
                    android:text="@string/device_management" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_marginBottom="32dp"
                    android:paddingHorizontal="16dp"
                    android:background="@drawable/rounded_gray_section">

                    <!-- wifi -->
                    <com.sena.senacamera.ui.component.MenuLink
                        android:id="@+id/wifi_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_link_title="@string/wifi" />

                    <!-- sd card -->
                    <com.sena.senacamera.ui.component.MenuLink
                        android:id="@+id/sd_card_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_link_title="@string/sd_card" />

                    <!-- device info -->
                    <com.sena.senacamera.ui.component.MenuLink
                        android:id="@+id/device_info_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_link_title="@string/device_info" />

                    <!-- factory reset -->
                    <com.sena.senacamera.ui.component.MenuLink
                        android:id="@+id/factory_reset_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        app:menu_link_underline="false"
                        app:menu_link_title="@string/factory_reset" />

                </LinearLayout>

                <!-- reset default button -->
                <LinearLayout
                    android:id="@+id/reset_button"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:gravity="center"
                    android:padding="12dp">
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:src="@drawable/selector_button_reset" />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/selector_button_light_gray_color"
                        android:text="@string/dialog_reset_to_default_title"/>
                </LinearLayout>

                <!-- bottom gap -->
                <View
                    android:layout_width="0dp"
                    android:layout_height="32dp" />

            </LinearLayout>

        </ScrollView>

    </LinearLayout>

    <!-- fragment container -->
    <FrameLayout
        android:id="@+id/fragment_container_device_settings"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

</androidx.constraintlayout.widget.ConstraintLayout>