<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:background="@drawable/rounded_bottom_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:paddingVertical="50dp"
    android:paddingHorizontal="16dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="40dp"
        android:text="@string/dialog_confirm_delete"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <android.widget.Button
            android:id="@+id/cancel_button"
            android:background="@drawable/rounded_grey_small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_marginEnd="10dp"
            android:textAllCaps="false"
            android:text="@string/action_cancel" />
a
        <android.widget.Button
            android:id="@+id/delete_button"
            android:textColor="@color/button_confirm_color"
            android:background="@drawable/rounded_white_small_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textAllCaps="false"
            android:text="@string/action_delete" />
    </LinearLayout>

</LinearLayout>